--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/courseFragment">
+    app:startDestination="@id/course_fragment">
 
     <fragment
-        android:id="@+id/courseFragment"
+        android:id="@+id/course_fragment"
         android:name="com.example.tarclearn.ui.fragment.CourseFragment"
-        android:label="fragment_course"
+        android:label="Course"
         tools:layout="@layout/fragment_course" />
+    <fragment
+        android:id="@+id/about_fragment"
+        android:name="com.example.tarclearn.ui.fragment.AboutFragment"
+        android:label="About"
+        tools:layout="@layout/fragment_about" />
 </navigation>
