--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="User"
-            type="com.example.tarclearn.model.User" />
+            type="com.example.tarclearn.model.UserDetailDto" />
 
     </data>
 
