--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,4 +15,9 @@
         android:name="com.example.tarclearn.ui.fragment.AboutFragment"
         android:label="About"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/manage_user_fragment"
+        android:name="com.example.tarclearn.ui.fragment.ManageUserFragment"
+        android:label="Manage User"
+        tools:layout="@layout/fragment_manage_user" />
 </navigation>
