--- a/app/src/main/res/layout/fragment_manage_course.xml
+++ b/app/src/main/res/layout/fragment_manage_course.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.AddCourseFragment">
+        tools:context=".ui.fragment.ManageCourseFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -57,6 +57,7 @@
                 android:layout_marginTop="30dp"
                 android:hint="@string/label_course_description"
                 app:helperText="@string/label_optional"
+                app:helperTextEnabled="true"
                 app:layout_constraintEnd_toEndOf="@+id/tv_course_name_layout"
                 app:layout_constraintStart_toStartOf="@+id/tv_course_name_layout"
                 app:layout_constraintTop_toBottomOf="@+id/tv_course_name_layout">
@@ -70,26 +71,27 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_cancel_create_course"
+                android:id="@+id/btn_cancel_course"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="5dp"
                 android:text="@string/label_cancel"
-                app:layout_constraintEnd_toStartOf="@+id/btn_create_course"
+                app:layout_constraintEnd_toStartOf="@+id/btn_ok_course"
                 app:layout_constraintStart_toStartOf="@+id/tv_course_description_layout"
                 app:layout_constraintTop_toBottomOf="@+id/tv_course_description_layout" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_create_course"
+                android:id="@+id/btn_ok_course"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="@string/label_create"
-                app:layout_constraintBottom_toBottomOf="@id/btn_cancel_create_course"
+                app:layout_constraintBottom_toBottomOf="@id/btn_cancel_course"
                 app:layout_constraintEnd_toEndOf="@id/tv_course_description_layout"
-                app:layout_constraintStart_toEndOf="@+id/btn_cancel_create_course"
-                app:layout_constraintTop_toTopOf="@+id/btn_cancel_create_course" />
+                app:layout_constraintStart_toEndOf="@+id/btn_cancel_course"
+                app:layout_constraintTop_toTopOf="@+id/btn_cancel_course" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
