--- a/app/src/main/res/menu/chapter_bottom_menu.xml
+++ b/app/src/main/res/menu/chapter_bottom_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
-        android:id="@+id/videoFragment"
+        android:id="@+id/videoListFragment"
         android:icon="@drawable/ic_baseline_menu_book_24"
         android:title="@string/label_video" />
     <item
@@ -16,8 +17,8 @@
         android:id="@+id/quizFragment"
         android:icon="@drawable/pencil"
         android:title="@string/label_quiz" />
-    <!--    <item-->
-    <!--        android:id="@+id/courseInfoFragment"-->
-    <!--        android:icon="@drawable/flask_empty_outline"-->
-    <!--        android:title="@string/label_info" />-->
+    <!--        <item-->
+    <!--            android:id="@+id/courseInfoFragment"-->
+    <!--            android:icon="@drawable/flask_empty_outline"-->
+    <!--            android:title="@string/label_info" />-->
 </menu>
