--- a/app/src/main/res/layout/fragment_course_list.xml
+++ b/app/src/main/res/layout/fragment_course_list.xml
@@ -19,6 +19,7 @@
             android:id="@+id/course_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="70dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
