--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -22,7 +22,7 @@
         android:paddingTop="140dp"
         android:paddingEnd="40dp"
         android:theme="@style/Theme.TARCLearnMobile"
-        tools:context=".ui.fragment.ProfileFragment">
+        tools:context=".ui.about.ProfileFragment">
 
         <TextView
             android:id="@+id/tvWelcome"
