--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -6,8 +7,9 @@
     <data>
         <variable
             name="loginViewModel"
-            type="com.example.tarclearn.viewmodel.LoginViewModel" />
+            type="com.example.tarclearn.viewmodel.login.LoginViewModel" />
     </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -29,7 +31,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txtUserId"/>
+                    android:id="@+id/txtUserId" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -48,7 +50,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txtPassword"/>
+                    android:id="@+id/txtPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
