--- a/app/src/main/res/layout/fragment_course_info.xml
+++ b/app/src/main/res/layout/fragment_course_info.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        tools:context=".ui.fragment.CourseInfoFragment">
+        tools:context=".ui.course.CourseInfoFragment">
 
         <TextView
             android:id="@+id/tv_course_id"
