--- a/app/src/main/res/layout/fragment_manage_user.xml
+++ b/app/src/main/res/layout/fragment_manage_user.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.ManageUserFragment">
+        tools:context=".ui.course.ManageUserFragment">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/course_menu"
