--- a/app/src/main/res/layout/fragment_course_info.xml
+++ b/app/src/main/res/layout/fragment_course_info.xml
@@ -14,7 +14,7 @@
         tools:context=".ui.course.CourseInfoFragment">
 
         <TextView
-            android:id="@+id/tv_course_id"
+            android:id="@+id/tv_course_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -29,10 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintEnd_toEndOf="@+id/tv_course_id"
+            app:layout_constraintEnd_toEndOf="@+id/tv_course_code"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/tv_course_id"
-            app:layout_constraintTop_toBottomOf="@+id/tv_course_id"
+            app:layout_constraintStart_toStartOf="@+id/tv_course_code"
+            app:layout_constraintTop_toBottomOf="@+id/tv_course_code"
             tools:text="Artificial Intelligence" />
 
         <ScrollView
