--- a/app/src/main/res/layout/fragment_manage_course.xml
+++ b/app/src/main/res/layout/fragment_manage_course.xml
@@ -18,16 +18,16 @@
             android:padding="16dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tv_course_id_layout"
+                android:id="@+id/tv_course_code_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/label_course_id"
+                android:hint="@string/label_course_code"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_course_id"
+                    android:id="@+id/tv_course_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -39,9 +39,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:hint="@string/label_course_name"
-                app:layout_constraintEnd_toEndOf="@+id/tv_course_id_layout"
-                app:layout_constraintStart_toStartOf="@+id/tv_course_id_layout"
-                app:layout_constraintTop_toBottomOf="@+id/tv_course_id_layout">
+                app:layout_constraintEnd_toEndOf="@+id/tv_course_code_layout"
+                app:layout_constraintStart_toStartOf="@+id/tv_course_code_layout"
+                app:layout_constraintTop_toBottomOf="@+id/tv_course_code_layout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tv_course_name"
