--- a/app/src/main/res/layout/item_view_course_user.xml
+++ b/app/src/main/res/layout/item_view_course_user.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardElevation="1dp"
+    android:clickable="true"
+    android:focusable="true"
     app:strokeColor="@color/stroke_color"
     app:strokeWidth="1dp">
 
@@ -58,10 +60,8 @@
                 style="?attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:iconGravity="textStart"
-                android:layout_marginEnd="8dp"
                 app:icon="@drawable/ic_baseline_clear_24"
-                app:iconTint="#FF0000" />
+                app:iconGravity="textStart" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
